--- a/test/fixtures/products.yml
+++ b/test/fixtures/products.yml
@@ -1,11 +1,13 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
+  number: MyString
   class: MyString
   count: 1
   value: 1
 
 two:
+  number: MyString
   class: MyString
   count: 1
   value: 1
